--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -34,3 +34,92 @@
     color: var(--primary);
     margin: 5rem 0;
   }
+
+  /*** Header ***/
+
+  .header {
+    background-image: linear-gradient(to right, rgb(0 0 0 / .8), rgb(0 0 0 / .7)), url(/img/header.jpg);
+    padding: 6rem 0;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .header .logo {
+    width: 25rem;
+  }
+
+  .barra {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .header .navegacion {
+    display: flex;
+    gap: 2rem;
+  }
+
+  .header .navegacion a {
+    color: var(--white);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.4rem;
+    padding: .5rem;
+    transition-property: background-color;
+    transition-duration: 300ms;
+  }
+
+  .header .navegacion a:hover, .header .active {
+    background-color: var(--primary);
+  }
+
+  
+  /** Footer **/
+  
+  .footer {
+    background-color: var(--black);
+    padding: 5rem 0;
+    margin-top: 5rem;
+  }
+  
+  .footer .navegacion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer .navegacion a,
+  .footer .copyright {
+    color: var(--white);
+    font-size: 2.2rem;
+    text-decoration: none;
+    font-weight: 700;
+  }
+  
+  .footer .copyright {
+    text-align: center;
+    font-weight: 400;
+  }
+
+  @media (min-width: 768px) {
+    .barra {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    .header .navegacion {
+      margin-top: 0;
+    }
+
+    .footer .contenido-footer {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .footer .navegacion {
+      flex-direction: row;
+      gap: 2rem;
+    }
+  }
