--- a/app/styles/blog.css
+++ b/app/styles/blog.css
@@ -4,6 +4,11 @@
     gap: 4rem;
 }
 
+.post {
+    max-width: 80rem;
+    margin: 0 auto;
+}
+
 .post .contenido {
 padding: 1.5rem;
 }
@@ -24,6 +29,14 @@ padding: 1.5rem;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
     overflow: hidden;
+}
+
+.post .texto {
+    white-space: pre-wrap;
+}
+
+.mt-3 {
+    margin-top: 3rem;
 }
 
 @media (min-width: 768px) {
